# smbpasswd-web-light

./: CODEOWNERS  Dockerfile  README.md
.github/workflows/: bandit.yml  dependency-review.yml  docker-publish.yml  eslint.yml  hadolint.yml  pylint.yml  python-app.yml  scorecard.yml  sonarcloud.yml  trivy.yml
docker/: entrypoint.sh
src/: app.py  pyproject.toml
src/templates/: base.html  change_passwd.html  index.html
