[tool.poetry]
name = "smbpasswd-web"
version = "0.1.0"
description = ""
license = "Unlicense"
authors = ["Ajabep <ajabep@tutanota.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
gunicorn = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
